--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   geolocator: ^9.0.2
   http: ^0.13.5
   provider: ^6.0.4
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
